--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,29 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Project</title>
+  <title>Portal BTI</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
+  <script>
+    $(window).scroll(()=>{
+      $(this).scrollTop()>=5 ? $(".navbar-animation").addClass("fixed-nav"):$(".navbar-animation").removeClass("fixed-nav");
+    });
+  </script>
+  <script>
+    $(document).ready(()=>{
+      $('.pageScroll').click(function(e){
+        var LinkHref = $(this).attr('href');
+        $('html,body').animate({
+          scrollTop: $(LinkHref).offset().top
+        });
+        e.preventDefault();
+      });
+    });
+  </script>
   <app-root></app-root>
 </body>
 </html>
