conclusão da homepage

--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,15 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>-->
 </head>
-<body>
+<body><!--
   <script>
     $(window).scroll(()=>{
       $(this).scrollTop()>=5 ? $(".navbar-animation").addClass("fixed-nav"):$(".navbar-animation").removeClass("fixed-nav");
     });
+
+
   </script>
   <script>
     $(document).ready(()=>{
@@ -25,6 +27,7 @@
       });
     });
   </script>
+  -->
   <app-root></app-root>
 </body>
 </html>
